# nanoeigenpy-release

./: .clang-format  .gersemirc  .git-blame-ignore-revs  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  debian.store  flake.nix  package.xml  patches.conf  pixi.toml  releaser_history.json  rpm.store  tracks.yaml
.github/workflows/: check-changelog.yml  macos-linux-windows-pixi.yml  nix.yml  ros_ci.yml  update_pixi_lockfile.yml
debian/: changelog  control  copyright  gbp.conf  rules
development/: release.md
development/scripts/pixi/: activation.bat  activation.sh  activation_clang.sh
include/nanoeigenpy/: constants.hpp  decompositions.hpp  eigen-base.hpp  fwd.hpp  geometry.hpp  id.hpp  nanoeigenpy.hpp  solvers.hpp
include/nanoeigenpy/decompositions/: bdcsvd.hpp  col-piv-householder-qr.hpp  complete-orthogonal-decomposition.hpp  complex-eigen-solver.hpp  complex-schur.hpp  eigen-solver.hpp  full-piv-householder-qr.hpp  full-piv-lu.hpp  generalized-eigen-solver.hpp  generalized-self-adjoint-eigen-solver.hpp  hessenberg-decomposition.hpp  householder-qr.hpp  jacobi-svd.hpp  ldlt.hpp  llt.hpp  partial-piv-lu.hpp  permutation-matrix.hpp  real-qz.hpp  real-schur.hpp  self-adjoint-eigen-solver.hpp  svd-base.hpp  tridiagonalization.hpp
include/nanoeigenpy/decompositions/sparse/: simplicial-cholesky.hpp  simplicial-ldlt.hpp  simplicial-llt.hpp  sparse-lu.hpp  sparse-qr.hpp  sparse-solver-base.hpp
include/nanoeigenpy/decompositions/sparse/accelerate/: accelerate.hpp
include/nanoeigenpy/decompositions/sparse/cholmod/: cholmod-base.hpp  cholmod-decomposition.hpp  cholmod-simplicial-ldlt.hpp  cholmod-simplicial-llt.hpp  cholmod-supernodal-llt.hpp
include/nanoeigenpy/geometry/: angle-axis.hpp  hyperplane.hpp  jacobi-rotation.hpp  parametrized-line.hpp  quaternion.hpp  rotation-2d.hpp  scaling.hpp  translation.hpp
include/nanoeigenpy/geometry/detail/: rotation-base.hpp
include/nanoeigenpy/solvers/: basic-preconditioners.hpp  bfgs-preconditioners.hpp  bicgstab.hpp  conjugate-gradient.hpp  incomplete-cholesky.hpp  incomplete-lut.hpp  iterative-solver-base.hpp  least-squares-conjugate-gradient.hpp  minres.hpp
include/nanoeigenpy/utils/: helpers.hpp  is-approx.hpp
rpm/: ros-rolling-nanoeigenpy.spec  template.spec
src/: internal.h  module.cpp  solvers.cpp
tests/: CMakeLists.txt  quaternion.cpp  test_accelerate.py  test_bdcsvd.py  test_cholmod_simplicial_ldlt.py  test_cholmod_simplicial_llt.py  test_cholmod_supernodal_llt.py  test_complex_eigen_solver.py  test_complex_schur.py  test_eigen_solver.py  test_full_piv_lu.py  test_generalized_eigen_solver.py  test_generalized_self_adjoint_eigen_solver.py  test_geometry.py  test_hessenberg_decomposition.py  test_incomplete_cholesky.py  test_incomplete_lut.py  test_iterative_solvers.py  test_jacobi_svd.py  test_ldlt.py  test_llt.py  test_partial_piv_lu.py  test_permutation_matrix.py  test_qr.py  test_real_qz.py  test_real_schur.py  test_self_adjoint_eigen_solver.py  test_simplicial_llt.py  test_sparse_lu.py  test_sparse_qr.py  test_tridiagonalization.py
tests/packaging/pixi_build/: CMakeLists.txt
