<?xml version="1.0"?>
<package format="3">
  <name>nanoeigenpy</name>
  <version>0.4.0</version>
  <description>A support library for bindings between Eigen in C++ and Python, based on nanobind</description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Wilson Jallet</author>
  <author>Lucas Haubert</author>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/Simple-Robotics/nanoeigenpy</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>

  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</depend>
  <depend>eigen</depend>
  <depend>nanobind-dev</depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
